--- a/ansible/slurm.conf.j2
+++ b/ansible/slurm.conf.j2
@@ -21,5 +21,5 @@ NodeName={{ gpu_node }} CPUs=256 Boards=8 SocketsPerBoard=2 CoresPerSocket=64 Th
 {% endfor %}
 
 # Разделы
-PartitionName=cpu_nodes Nodes={{ groups['slurm_cpu_nodes'] | join(',') }},{{ groups['slurm_controller'][0] }} Default=YES MaxTime=INFINITE State=UP
+PartitionName=cpu_nodes Nodes={{ groups['slurm_cpu_nodes'] | join(',') }},{{ groups['slurm_gpu_nodes'][0] }} Default=YES MaxTime=INFINITE State=UP
 PartitionName=gpu_nodes Nodes={{ groups['slurm_gpu_nodes'] | join(',') }} MaxTime=INFINITE State=UP
