--- a/ansible/slurm.conf.j2
+++ b/ansible/slurm.conf.j2
@@ -1,5 +1,6 @@
 ClusterName=csp_cluster
 ControlMachine={{ groups['slurm_controller'][0] }}
+GresTypes=gpu
 SlurmdPort=6818
 SlurmctldPort=6817
 SlurmUser=slurm
