--- a/ansible/slurm.conf.j2
+++ b/ansible/slurm.conf.j2
@@ -18,7 +18,7 @@ NodeName={{ node }} CPUs=256 Sockets=2 CoresPerSocket=64 ThreadsPerCore=2 RealMe
 
 # Узел с GPU
 {% for gpu_node in groups['slurm_gpu_nodes'] %}
-NodeName={{ gpu_node }} CPUs=256 Sockets=2 CoresPerSocket=64 ThreadsPerCore=2 RealMemory=2000000 Gres=gpu:8 State=UNKNOWN
+NodeName={{ gpu_node }} CPUs=256 Sockets=2 CoresPerSocket=64 ThreadsPerCore=2 RealMemory=2000000 Gres=gpu:a100:8 State=UNKNOWN
 {% endfor %}
 
 # Разделы
